Photo upload and delete

--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -34,7 +34,11 @@
         </div>
       </div>
       <div class="card-footer">
-        <button class="btn btn-success btn-block" form="editForm" [disabled]="!editForm.dirty">
+        <button
+          class="btn btn-success btn-block"
+          form="editForm"
+          [disabled]="!editForm.dirty"
+        >
           Save changes
         </button>
       </div>
@@ -86,7 +90,7 @@
         </form>
       </tab>
       <tab heading="Edit Photos">
-        <p>Photo Edit</p>
+        <app-photo-editor [member]="member"></app-photo-editor>
       </tab>
     </tabset>
   </div>
