--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -33,9 +33,9 @@
       *ngIf="accountService.currentUser$ | async as user"
       dropdown
     >
-      <img src="{{ user.photoUrl || './assets/user.png'}}" alt="{{ user.username }}" />
+      <img src="{{ user.photoUrl || './assets/user.png'}}" alt="{{ user.knownAs }}" />
       <a class="dropdown-toggle text-light ml-2" dropdownToggle
-        >Welcome {{ user.username | titlecase }}</a
+        >Welcome {{ user.knownAs | titlecase }}</a
       >
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
