--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -14,7 +14,7 @@
           <i class="fa fa-user"></i>
         </button>
 
-        <button class="btn btn-primary">
+        <button class="btn btn-primary" (click)="addLike(member)">
           <i class="fa fa-heart"></i>
         </button>
 
