--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -13,12 +13,14 @@
         >
           <i class="fa fa-user"></i>
         </button>
-
         <button class="btn btn-primary" (click)="addLike(member)">
           <i class="fa fa-heart"></i>
         </button>
-
-        <button class="btn btn-primary">
+        <button
+          routerLink="/members/{{ member.username }}"
+          [queryParams]="{ tab: 3 }"
+          class="btn btn-primary"
+        >
           <i class="fa fa-envelope"></i>
         </button>
       </li>
