--- a/client/src/app/members/member-card/member-card.component.css
+++ b/client/src/app/members/member-card/member-card.component.css
@@ -17,20 +17,34 @@
 }
 
 .member-icons {
-    position: absolute;
-    bottom: -30%;
-    left: 0;
-    right: 0;
-    margin-right: auto;
-    margin-left: auto;
-    opacity: 0;
+  position: absolute;
+  bottom: -30%;
+  left: 0;
+  right: 0;
+  margin-right: auto;
+  margin-left: auto;
+  opacity: 0;
 }
 
-.card-img-wrapper:hover .member-icons{
-    bottom: 0;
+.card-img-wrapper:hover .member-icons {
+  bottom: 0;
+  opacity: 1;
+}
+
+.animate {
+  transition: all 0.3s ease-in-out;
+}
+
+@keyframes fa-blink {
+  0% {
     opacity: 1;
+  }
+  100% {
+    opacity: 0.4;
+  }
 }
 
-.animate{
-    transition: all 0.3s ease-in-out;
+.is-online {
+  animation: fa-blink 1.5s linear infinite;
+  color: rgb(1, 189, 42);
 }
