--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -26,6 +26,11 @@
     [formControl]="registerForm.controls['knownAs']"
     [label]="'Known As'"
   ></app-text-input>
+  <app-text-input
+  [formControl]="registerForm.controls['email']"
+  [label]="'Email'"
+  [type]="'email'"
+></app-text-input>
   <app-date-input
     [formControl]="registerForm.controls['dateOfBirth']"
     [label]="'Date Of Birth'"
